<resources>
    <string name="app_name">FileManager</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="text_signup">Need Sign Up?</string>
    <string name="text_signin">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_folder">Folders</string>
    <string name="back_home">Back</string>
    <string name="default_folder">0 folders</string>
    <string name="folder_home">Folders</string>
    <string name="folders_home">Folders</string>
    <string name="no_folders">No Folders</string>
    <string name="sign_in">Sign in</string>
    <string name="sort_a_to_z">Sort A to Z</string>
    <string name="sort_z_to_a">Sort Z to A</string>
    <string name="sort_time">Sort by time</string>
    <string name="cancel">Cancel</string>

</resources>