<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="15dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_top_bottomsheet_home"
        android:text="@string/sort_a_to_z"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:id="@+id/tv_sort_a_z"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_center_bottomsheet_home"
        android:text="@string/sort_z_to_a"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_a_z"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:id="@+id/tv_sort_z_a"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_bottom_bottomsheet_home"
        android:text="@string/sort_time"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_z_a"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:id="@+id/tv_sort_time"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:padding="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_full_bottomsheet_home"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_time"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:id="@+id/tv_cancel"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:padding="20dp"
        android:layout_marginTop="15dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
